--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -248,3 +248,14 @@
   year={2010},
   publisher={Cambridge University Press}
 }
+
+@incollection{stevenhagen,
+  booktitle={Algorithmic Number Theory: Lattices, Number Fields, Curves and Cryptography},
+  title={The arithmetic of number rings},
+  author={Stevenhagen, P.},
+  editor={Buhler, J. P. and Stevenhagen, P.},
+  isbn={9780521808545},
+  series={Mathematical Sciences Research Institute Publications},
+  year={2008},
+  publisher={Cambridge University Press}
+}
