--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -259,3 +259,18 @@
   year={2008},
   publisher={Cambridge University Press}
 }
+
+@article{pleasants,
+author = {Pleasants,P. A. B.},
+title = {The number of generators of the integers of a number field},
+journal = {Mathematika},
+volume = {21},
+issue = {02},
+month = {12},
+year = {1974},
+issn = {2041-7942},
+pages = {160--167},
+numpages = {8},
+doi = {10.1112/S0025579300008548},
+URL = {http://journals.cambridge.org/article_S0025579300008548},
+}
