--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -274,3 +274,16 @@ numpages = {8},
 doi = {10.1112/S0025579300008548},
 URL = {http://journals.cambridge.org/article_S0025579300008548},
 }
+
+@article{monogenic,
+   author = {{B{\'e}rczes}, A. and {Evertse}, J.-H. and {Gy{\H o}ry}, K.},
+    title = "{Multiply monogenic orders}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1103.4740},
+ primaryClass = "math.NT",
+ keywords = {Mathematics - Number Theory, 11R99, 11D99, 11J99},
+     year = 2011,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2011arXiv1103.4740B},
+}
